# xpkit

./: README.md  pyproject.toml
src/abtestwise/: __init__.py
src/xpkit/: __init__.py  result.py  validation.py
tests/: test_binary.py  test_validation.py
