[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xpkit"
version = "0.1.1"
description = "Lightweight toolkit for binary A/B experiment analysis using aggregate counts."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["ab-testing", "experimentation", "statistics", "bayesian", "frequentist"]
dependencies = [
    "numpy>=1.22",
    "scipy>=1.8",
    "matplotlib>=3.5",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/xpkit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
